--- a/bigCConnect/src/main/res/layout/single_textview_listitem.xml
+++ b/bigCConnect/src/main/res/layout/single_textview_listitem.xml
@@ -5,4 +5,7 @@
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:gravity="center_vertical"
+    android:textColor="@color/black"
+    android:padding="5sp"
+    android:background="@color/white"
     android:minHeight="?android:attr/listPreferredItemHeightSmall" />
