like from newsfeeds done

--- a/bigCConnect/src/main/res/layout/newsfeed_item_layout.xml
+++ b/bigCConnect/src/main/res/layout/newsfeed_item_layout.xml
@@ -106,6 +106,7 @@
         <ImageView
             android:id="@+id/loveImage"
             android:layout_width="25dp"
+            android:clickable="true"
             android:layout_height="25dp"
             android:src="@drawable/ic_love_colored" />
 
