Tribute completed and other minor changes. Committed by: Preeti

--- a/bigCConnect/src/main/res/layout/autotext_layout.xml
+++ b/bigCConnect/src/main/res/layout/autotext_layout.xml
@@ -5,6 +5,9 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:text="Ekta"
+    android:textColor="@color/black"
+    android:padding="5sp"
+    android:background="@color/white"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:textAppearance="?android:attr/textAppearanceListItemSmall" />
 
